# os_in_rust

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
