[package]
name = "os_in_rust"
version = "0.1.0"
authors = ["kzk-maeda <kzk.maeda0711@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"